# tessera

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
data/: fragments.csv  pdbench.csv
notebooks/: 1. Analyse Fragments.ipynb  2. Convolve and Match.ipynb  3. Convolve Shape.ipynb  4. Plot Performance.ipynb  Explore entropy-Copy1.ipynb  Explore entropy.ipynb
scripts/: aggregate_probabilities.py  analyse_metrics.py  create_fragment_angles.py  create_fragment_pdb.py  create_random_fragments.py  run_metrics_on_all_data.py
scripts/cool_plots/: plot_protein.py
scripts/esm_embeddings/: run_esm_on_fasta.sh
scripts/fragment_analysis/: classification_dssp.py  clustering.py
scripts/functional_fragments/: analyse_fragments.sh  create_big_distance_matrix.py  create_design_to_success_rate.py  create_diffusion_templates.sh  create_pdb_queries.py  design_success_roc.py  download_pdbs.py  foldseek_check_input_proteins.sh  foldseek_check_proteins.py  functional_fragment_graph_analysis.py  get_new_paths.sh  parse_foldseek_html_to_json.py  rfdiff_generate_structures.sh  rfdiff_generate_structures_extended.sh  rmsd_check_proteins.py  run_pdbs_in_foldseek_locally_PDB.sh  run_pdbs_in_foldseek_locally_PDB_naive.sh  run_pdbs_in_foldseek_locally_naive.sh  search_benchmark.py  select_pdb_and_create_template.py  visualise_rmsd.sh
scripts/functional_fragments_naive/: create_diffusion_template.sh
scripts/go_prediction/: crawl_uniprot_pdbs.py
scripts/go_uniprot/: filter_go_uniprot_by_af2.py  go_to_uniprot.py  go_to_uniprot_pd.py  parse_mmseqs_uniprot.py  uniprot_to_fasta.py
scripts/graph_clustering/: graph_clustering.py
scripts/mmseq2_filter/: cluster_mmseq2.sh  interpro_to_fasta.py  parse_mmseq.py
scripts/unsupervised_learning/: clustering.py  go_to_pdb_to_graph.py
src/difference_fn/: difference_processing.py  difference_selector.py  probability_processing.py  ramachandran_difference.py
src/fragments/: classification_config.py  diffusion_template.py  fragments_classifier.py  fragments_graph.py  reference_fragments.py
src/function_prediction/: graph_dataset.py  train.py  train_utils.py  uniprot_processing.py
src/visualization/: fold_coverage.py  fragment_ui.py  fragments_function_ui.py  fragments_functions.py  graph_ui.py  pdb_to_fragment.py  vis_utils.py
tessera/: __init__.py
tessera/difference_fn/: angle_difference.py  difference_processing.py  difference_selector.py  probability_processing.py  ramachandran_difference.py  sequence_difference.py  shape_difference.py
tessera/fragments/: diffusion_template.py  fragments_classifier.py  fragments_graph.py  reference_fragments.py
tessera/function_prediction/: graph_dataset.py  model.py  train.py  train_utils.py  uniprot_processing.py
tessera/visualization/: fold_coverage.py  fragment_ui.py  graph_ui.py  (+4 more)
tests/: test_angle_difference.py  test_ensemble_classifier.py  test_probability_processing.py  test_sequence_difference.py
(+238 files in other folders)
